# python-template

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.app  Dockerfile.package  Makefile  Makefile.app  Makefile.package  README.app.md  README.md  README.package.md  docker-compose.app.dev.yml  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.lambda.yml  docker-compose.package.yml  docker-compose.yml  pyproject.toml  repository-init.sh
.chglog/: config.yml
.devcontainer/: devcontainer.app.json  devcontainer.json  devcontainer.package.json
.github/app/: master.yml  next-version.yml  publish-latest.yml  publish-version.yml
.github/package/: master.yml  next-version.yml  publish-version.yml
.github/workflows/: bump_new_version.yaml  ci.yaml  develop.yml  master.yml  release.yml  template-release.yml  template_new_version.yaml
app/: __main__.py  settings.py
app/module/: example.py
docs/source/: conf.py  index.rst  modules.rst  readme.md
misc/: ssh-config
scripts/: check-template-version.sh  code-quality.sh  get-codeartifact-info.sh  next-release.sh  poetry-codeartifact-token.sh  repo-init.sh
scripts/app/: publish-latest.sh  publish-versioned.sh  publish.sh
scripts/codeartifact/: args.sh  configure-poetry.sh  get-info.sh
scripts/package/: next-version.sh  publish-versioned-package.sh
src/python_template/: __init__.py  __main__.py  settings.py
src/python_template/module_example/: example.py
tests/: test_settings.py
tests/module/: test_example.py
