[tool.poetry]
name = "python-template"
version = "1.0.0"
description = "description-here"
authors = ["Adem Usta <adem@adem.sh>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
black = "^22.8.0"
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
ipython = "^8.5.0"
poethepoet = "^0.16.4"
mypy = "^0.991"

[tool.poe.tasks]
tests = "coverage run -m pytest"
coverage = "coverage report -m"
lint = "pylint app"
format = "black app --check"
type-check = "mypy --package app --install-types --non-interactive"

[tool.black]
line-length = 100

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*__init__*", "*__main__*"]
source = ["app"]

[tool.coverage.report]
fail_under = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
